Added calc_sigma function
It's reeeally fast, I think

--- a/InitialDeprojectionNotebook.ipynb
+++ b/InitialDeprojectionNotebook.ipynb
@@ -22,12 +22,26 @@
    "outputs": [],
    "source": [
     "#Initiation of data\n",
-    "\n"
+    "\n",
+    "#cosl = np.cos(sample_l)\n",
+    "#cosb = np.cos(sample_b)\n",
+    "#sinl = np.sin(sample_l)\n",
+    "#sinb = np.sin(sample_b)\n",
+    "\n",
+    "#mul=sample values\n",
+    "#mub=sample values\n",
+    "pvals = s*np.array([-sinl*cosb*mul - cosl*sinb*mub,\n",
+    "                 cosl*cosb*mul - sinl*sinb*mub,\n",
+    "                 cosb*mub])\n",
+    "    \n",
+    "rhatvals = np.array([cosb*cosl, cosb*sinl, sinb])\n",
+    "    \n",
+    "pmean = np.mean(pvals, axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 202,
    "metadata": {
     "collapsed": true
    },
@@ -68,10 +82,8 @@
     "    vr = np.concatenate((vrx,vry,vrz))\n",
     "    #vr = np.sqrt(vrx**2+vry**2+vrz**2)\n",
     "    vr.sort()\n",
-    "    print(vr.shape)\n",
     "    \n",
     "    vr_prime =(vr[:-1] + vr[1:]) / 2\n",
-    "    print(len(vr_prime))\n",
     "    line_bins = np.zeros((len(vr_prime),3))\n",
     "    for i in range(len(vr_prime)):\n",
     "        v_prime = pk + vr_prime[i]*rhat\n",
@@ -80,7 +92,6 @@
     "    \n",
     "    line_bins = line_bins.astype(int)\n",
     "    #line_bins, unique_ind = np.unique(line_bins,axis=0,return_index=True)\n",
-    "    print(line_bins.shape)\n",
     "    \n",
     "    #line_len = vr[1:]-vr[:-1]\n",
     "    line_len = vr[1:]-vr[:-1]\n",
@@ -96,10 +107,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Testing calc_K\n",
+    "\n",
     "nx,ny,nz = 30,30,30\n",
     "hx,hy,hz = 10,10,10\n",
     "phi = np.zeros((nx,ny,nz)) # First test\n",
@@ -116,135 +129,52 @@
     "\n",
     "rhat = np.array([cosb*cosl, cosb*sinl, sinb])\n",
     "\n",
-    "#S = np.array([[-sinl,cosl,0],\n",
-    "#              [-sinb*cosl,-sinb*sinl,cosb]])\n",
+    "S = np.array([[-sinl,cosl,0],\n",
+    "              [-sinb*cosl,-sinb*sinl,cosb]])\n",
     "\n",
     "p = s*np.array([-sinl*cosb*mul - cosl*sinb*mub,\n",
     "                 cosl*cosb*mul - sinl*sinb*mub,\n",
     "                 cosb*mub])\n",
     "\n",
-    "rhat = np.array([1,1,1])\n",
-    "#p = np.array([0,0,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "rhat must be a unit vector",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-191-88ed8f61fe1f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Testing K\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mK\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlb\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mll\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalc_K\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mrhat\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mhx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mhy\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mny\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mhz\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnz\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-185-5c3c424be661>\u001b[0m in \u001b[0;36mcalc_K\u001b[1;34m(pk, rhat, vxmin, dvx, nx, vymin, dvy, ny, vzmin, dvz, nz)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrhat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m!=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'rhat must be a unit vector'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[0mrhatx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrhaty\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrhatz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrhat\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: rhat must be a unit vector"
-     ]
-    }
-   ],
-   "source": [
-    "#Testing K\n",
+    "rhat = np.array([1,1,1])/np.sqrt(3)\n",
+    "p = np.array([0,0,0])\n",
     "\n",
-    "K, lb, ll, vr = calc_K(p,rhat,0,hx,nx,0,hy,ny,0,hz,nz)"
+    "K, lb, ll, vr = calc_K(p,rhat,0,hx,nx,0,hy,ny,0,hz,nz)\n",
+    "\n",
+    "#print(K)\n",
+    "#print(ll)\n",
+    "#print(lb)\n",
+    "#print(vr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 212,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 11.72513655   8.12151547   3.60362109  11.72513655   4.9797746\n",
-      "   6.74536196   9.98692768   1.73820887   1.83803373   9.88710283\n",
-      "  10.42142941   1.30370714  11.72513655   7.27968854   4.44544802\n",
-      "   8.94894974   2.77618681   4.13794767   7.58718889  11.72513655\n",
-      "   0.9962068   10.72892976   9.57960248   2.14553407   7.9109718\n",
-      "   3.81416475   6.43786161   5.28727494  11.72513655   3.29612074\n",
-      "   8.42901582  11.72513655   0.15437987   6.71861399   4.85214269\n",
-      "   8.73777555   2.987361    11.72513655   5.59603468   6.12910187\n",
-      "  11.72513655   2.45429381   3.38072211   5.89012063  11.03768949\n",
-      "   0.68744706  11.72513655   7.89594862   3.82918793  11.72513655\n",
-      "   4.75420775   0.04283023   6.92809857]\n",
-      "[[ 0  0  0]\n",
-      " [ 1  0  0]\n",
-      " [ 1  1  0]\n",
-      " [ 2  1  0]\n",
-      " [ 3  1  0]\n",
-      " [ 3  2  0]\n",
-      " [ 4  2  0]\n",
-      " [ 4  2  1]\n",
-      " [ 5  2  1]\n",
-      " [ 5  3  1]\n",
-      " [ 6  3  1]\n",
-      " [ 6  4  1]\n",
-      " [ 7  4  1]\n",
-      " [ 8  4  1]\n",
-      " [ 8  5  1]\n",
-      " [ 9  5  1]\n",
-      " [ 9  5  2]\n",
-      " [10  5  2]\n",
-      " [10  6  2]\n",
-      " [11  6  2]\n",
-      " [12  6  2]\n",
-      " [12  7  2]\n",
-      " [13  7  2]\n",
-      " [13  8  2]\n",
-      " [14  8  2]\n",
-      " [14  8  3]\n",
-      " [15  8  3]\n",
-      " [15  9  3]\n",
-      " [16  9  3]\n",
-      " [17  9  3]\n",
-      " [17 10  3]\n",
-      " [18 10  3]\n",
-      " [19 10  3]\n",
-      " [19 11  3]\n",
-      " [19 11  4]\n",
-      " [20 11  4]\n",
-      " [20 12  4]\n",
-      " [21 12  4]\n",
-      " [22 12  4]\n",
-      " [22 13  4]\n",
-      " [23 13  4]\n",
-      " [24 13  4]\n",
-      " [24 14  4]\n",
-      " [24 14  5]\n",
-      " [25 14  5]\n",
-      " [25 15  5]\n",
-      " [26 15  5]\n",
-      " [27 15  5]\n",
-      " [27 16  5]\n",
-      " [28 16  5]\n",
-      " [29 16  5]\n",
-      " [29 17  5]\n",
-      " [29 17  6]]\n",
-      "[  1.33102752e-01   1.18582393e+01   1.99797548e+01   2.35833759e+01\n",
-      "   3.53085124e+01   4.02882870e+01   4.70336490e+01   5.70205766e+01\n",
-      "   5.87587855e+01   6.05968192e+01   7.04839221e+01   8.09053515e+01\n",
-      "   8.22090586e+01   9.39341952e+01   1.01213884e+02   1.05659332e+02\n",
-      "   1.14608281e+02   1.17384468e+02   1.21522416e+02   1.29109605e+02\n",
-      "   1.40834741e+02   1.41830948e+02   1.52559878e+02   1.62139480e+02\n",
-      "   1.64285015e+02   1.72195986e+02   1.76010151e+02   1.82448013e+02\n",
-      "   1.87735288e+02   1.99460424e+02   2.02756545e+02   2.11185561e+02\n",
-      "   2.22910697e+02   2.23065077e+02   2.29783691e+02   2.34635834e+02\n",
-      "   2.43373609e+02   2.46360970e+02   2.58086107e+02   2.63682142e+02\n",
-      "   2.69811244e+02   2.81536380e+02   2.83990674e+02   2.87371396e+02\n",
-      "   2.93261517e+02   3.04299206e+02   3.04986653e+02   3.16711790e+02\n",
-      "   3.24607738e+02   3.28436926e+02   3.40162063e+02   3.44916271e+02\n",
-      "   3.44959101e+02   3.51887199e+02]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(ll)\n",
-    "print(lb)\n",
-    "print(vr)"
+    "def calc_sigma(rhatvals,pvals,pmean):\n",
+    "    \n",
+    "    rhatvals_outer = rhatvals[:,:,None]*rhatvals[:,None,:]\n",
+    "\n",
+    "    iden = np.identity(3)\n",
+    "    \n",
+    "    A = np.stack([iden]*len(rhatvals_outer))-rhatvals_outer\n",
+    "\n",
+    "    Ainv = np.linalg.inv(A)\n",
+    "    \n",
+    "    Ainv_mean = np.mean(Ainv_vals,axis=0)\n",
+    "    v_mean = np.dot(Ainv_mean, pmean)\n",
+    "    \n",
+    "    pp = pvals - np.dot(A,v_mean)\n",
+    "    \n",
+    "    ppx, ppy, ppz = pp[:,0], pp[:,1], pp[:,2]\n",
+    "    \n",
+    "    ppx2mean = np.mean(ppx*ppx,axis=0)\n",
+    "    ppy2mean = np.mean(ppy*ppy,axis=0)\n",
+    "    ppz2mean = np.mean(ppz*ppz,axis=0)\n",
+    "    \n",
+    "    sigma2 = (3/14)*np.array([[9,-1,-1],[-1,9,-1],[-1,-1,9]])"
    ]
   },
   {
