Fixed sigma2 func and added attempt at second derivative estimator

--- a/InitialDeprojectionNotebook.ipynb
+++ b/InitialDeprojectionNotebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -15,10 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 127,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Initiation of data\n",
@@ -30,18 +28,43 @@
     "\n",
     "#mul=sample values\n",
     "#mub=sample values\n",
+    "\n",
+    "nx,ny,nz = 30,30,30\n",
+    "hx,hy,hz = 10,10,10\n",
+    "phi = np.zeros((nx,ny,nz)) # First test\n",
+    "\n",
+    "bvals = np.array([10.,10.,10.])\n",
+    "lvals = np.array([30.,30.,30.])\n",
+    "\n",
+    "b = np.deg2rad(bvals) # just a test\n",
+    "l = np.deg2rad(lvals)\n",
+    "cosl = np.cos(l)\n",
+    "cosb = np.cos(b)\n",
+    "sinl = np.sin(l)\n",
+    "sinb = np.sin(b)\n",
+    "s = 0.1\n",
+    "\n",
+    "S = np.array([[-sinl,cosl,0],\n",
+    "              [-sinb*cosl,-sinb*sinl,cosb]])\n",
+    "\n",
+    "mul = np.array([1,1,1])\n",
+    "mub = np.array([1,1,1])\n",
+    "\n",
     "pvals = s*np.array([-sinl*cosb*mul - cosl*sinb*mub,\n",
     "                 cosl*cosb*mul - sinl*sinb*mub,\n",
     "                 cosb*mub])\n",
     "    \n",
     "rhatvals = np.array([cosb*cosl, cosb*sinl, sinb])\n",
+    "\n",
+    "pvals = pvals.T\n",
+    "rhatvals = rhatvals.T\n",
     "    \n",
     "pmean = np.mean(pvals, axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 128,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +74,7 @@
     "    '''Calculate the values of K simultaneously for all bins'''\n",
     "    K = np.zeros((nx,ny,nz))\n",
     "    vmin = np.array([vxmin,vymin,vzmin])\n",
-    "    dv = np.array([dvx,dvy,dvz])\n",
+    "    dvx, dvy, dvz = np.array([dvx,dvy,dvz])\n",
     "    \n",
     "    vxmax, vymax, vzmax = vxmin+nx*dvx,vymin+ny*dvy,vzmin+nz*dvz\n",
     "    # Find intersections along one dimension (say x)\n",
@@ -107,50 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Testing calc_K\n",
-    "\n",
-    "nx,ny,nz = 30,30,30\n",
-    "hx,hy,hz = 10,10,10\n",
-    "phi = np.zeros((nx,ny,nz)) # First test\n",
-    "\n",
-    "b = np.deg2rad(10.) # just a test\n",
-    "l = np.deg2rad(30.)\n",
-    "cosl = np.cos(l)\n",
-    "cosb = np.cos(b)\n",
-    "sinl = np.sin(l)\n",
-    "sinb = np.sin(b)\n",
-    "s = 0.1\n",
-    "\n",
-    "mul,mub=2,1\n",
-    "\n",
-    "rhat = np.array([cosb*cosl, cosb*sinl, sinb])\n",
-    "\n",
-    "S = np.array([[-sinl,cosl,0],\n",
-    "              [-sinb*cosl,-sinb*sinl,cosb]])\n",
-    "\n",
-    "p = s*np.array([-sinl*cosb*mul - cosl*sinb*mub,\n",
-    "                 cosl*cosb*mul - sinl*sinb*mub,\n",
-    "                 cosb*mub])\n",
-    "\n",
-    "rhat = np.array([1,1,1])/np.sqrt(3)\n",
-    "p = np.array([0,0,0])\n",
-    "\n",
-    "K, lb, ll, vr = calc_K(p,rhat,0,hx,nx,0,hy,ny,0,hz,nz)\n",
-    "\n",
-    "#print(K)\n",
-    "#print(ll)\n",
-    "#print(lb)\n",
-    "#print(vr)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
-   "metadata": {},
+   "execution_count": 129,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def calc_sigma(rhatvals,pvals,pmean):\n",
@@ -163,7 +153,7 @@
     "\n",
     "    Ainv = np.linalg.inv(A)\n",
     "    \n",
-    "    Ainv_mean = np.mean(Ainv_vals,axis=0)\n",
+    "    Ainv_mean = np.mean(Ainv,axis=0)\n",
     "    v_mean = np.dot(Ainv_mean, pmean)\n",
     "    \n",
     "    pp = pvals - np.dot(A,v_mean)\n",
@@ -174,23 +164,145 @@
     "    ppy2mean = np.mean(ppy*ppy,axis=0)\n",
     "    ppz2mean = np.mean(ppz*ppz,axis=0)\n",
     "    \n",
-    "    sigma2 = (3/14)*np.array([[9,-1,-1],[-1,9,-1],[-1,-1,9]])"
+    "    pp2mean = np.array([ppx2mean,ppy2mean,ppz2mean])\n",
+    "    \n",
+    "    A = np.array([[9,-1,-1],[-1,9,-1],[-1,-1,9]])\n",
+    "    \n",
+    "    sigma2 = (3/14)*np.dot(A,pp2mean)\n",
+    "    \n",
+    "    return sigma2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.00051415,  0.08137924,  0.0386433 ])"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nl_delta(n,l):\n",
+    "    \n",
+    "    \"\"\"Checks if our given vector n is within one unit vector e_i of the cell l\"\"\"\n",
+    "    \n",
+    "    e_x = np.array([1,0,0])\n",
+    "    e_y = np.array([0,1,0])\n",
+    "    e_z = np.array([0,0,1])\n",
+    "    \n",
+    "    rules = [np.array_equal(n,l+e_x),\n",
+    "            np.array_equal(n,l-e_x),\n",
+    "            np.array_equal(n,l+e_y),\n",
+    "            np.array_equal(n,l-e_y),\n",
+    "            np.array_equal(n,l+e_z),\n",
+    "            np.array_equal(n,l-e_z)]\n",
+    "    \n",
+    "    if np.array_equal(n,l):\n",
+    "        delta = -2\n",
+    "    elif any(rules):\n",
+    "        delta = 1\n",
+    "    else:\n",
+    "        delta = 0\n",
+    "    \n",
+    "    return delta\n",
+    "        \n",
+    "def calc_xhi(line_bins,sigma2,hx,hy,hz,nx,ny,nz):\n",
+    "\n",
+    "    #Given a vector l, find the estimate of the second derivative. Compare l with possible adjacent n values.    \n",
+    "    \n",
+    "    h2 = np.array([hx**2,hy**2,hz**2])\n",
+    "    \n",
+    "    xhi = np.zeros((len(line_bins),7))\n",
+    "    \n",
+    "    n_bins = np.array([nx,ny,nz])\n",
+    "    \n",
+    "    e_x = np.array([1,0,0])\n",
+    "    e_y = np.array([0,1,0])\n",
+    "    e_z = np.array([0,0,1])\n",
+    "    \n",
+    "    for i in range(len(line_bins)):\n",
+    "        \n",
+    "        l = line_bins[i]\n",
+    "        \n",
+    "        n_list = [l,\n",
+    "                 l+e_x,l-e_x,\n",
+    "                 l+e_y,l-e_y,\n",
+    "                 l+e_z,l-e_z]\n",
+    "        \n",
+    "        print(n_list)\n",
+    "        \n",
+    "        for j in range(7):\n",
+    "            \n",
+    "            n = n_list[j]\n",
+    "            \n",
+    "            if (all(n>=0)) and (all(n<=n_bins)):\n",
+    "                xhi[i][j] += np.sum((sigma2/h2) *  nl_delta(n,l))\n",
+    "\n",
+    "    return xhi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx, ny, nz = 5, 5, 5\n",
+    "\n",
+    "phi = np.ones((nx,ny,nz))\n",
+    "\n",
+    "def sec_der(phi,sigma2,hx,hy,hz,nx,ny,nz):\n",
+    "    \n",
+    "    \"\"\"Attempt to solve the problem without for-loops. Still needs some work\"\"\"\n",
+    "    \n",
+    "    nx, ny, nz = len(phi[0]), len(phi[1]), len(phi[2])\n",
+    "    \n",
+    "    nxx, nyy, nzz = nx+2, ny+2, nz+2\n",
+    "    \n",
+    "    h2 = np.array([hx*hx,hy*hy,hz*hz])\n",
+    "\n",
+    "    phip = np.zeros((nxx,nyy,nzz))\n",
+    "\n",
+    "    \n",
+    "    phip[1:-1,1:-1,1:-1] = phi\n",
+    "    \n",
+    "    kappa = sigma2/h2\n",
+    "    \n",
+    "    kappa_sum = sum(sigma2/h2)\n",
+    "    \n",
+    "    phi_fac = np.array([phip[0:nxx-2:,:,:]+phip[2:nxx,:,:],\n",
+    "                           phip[:,0:nyy-2,:]+phip[:,2:nyy,:],\n",
+    "                           phip[:,:,0:nzz-2]+phip[:,:,2:nzz]])\n",
+    "    \n",
+    "    phi_arr = np.dot(kappa,phi_fac)-2*kappa_sum*phip\n",
+    "    \n",
+    "    phi_arr = np.sum(phi_arr)\n",
+    "    \n",
+    "    return phi_arr"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
+    "scrolled": false
    },
    "outputs": [],
    "source": []
