Implemented sec_der function
The function estimates the second derivative of the velocity distribution function for each cell l in our velocity space.

--- a/InitialDeprojectionNotebook.ipynb
+++ b/InitialDeprojectionNotebook.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,9 +29,8 @@
     "#mul=sample values\n",
     "#mub=sample values\n",
     "\n",
-    "nx,ny,nz = 30,30,30\n",
-    "hx,hy,hz = 10,10,10\n",
-    "phi = np.zeros((nx,ny,nz)) # First test\n",
+    "n = np.array([30,30,30])\n",
+    "h = np.array([10,10,10])\n",
     "\n",
     "bvals = np.array([10.,10.,10.])\n",
     "lvals = np.array([30.,30.,30.])\n",
@@ -54,27 +53,27 @@
     "                 cosl*cosb*mul - sinl*sinb*mub,\n",
     "                 cosb*mub])\n",
     "    \n",
-    "rhatvals = np.array([cosb*cosl, cosb*sinl, sinb])\n",
-    "\n",
-    "pvals = pvals.T\n",
-    "rhatvals = rhatvals.T\n",
-    "    \n",
-    "pmean = np.mean(pvals, axis=0)"
+    "rhatvals = np.array([cosb*cosl, cosb*sinl, sinb]).T\n",
+    "pvals = pvals.T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 236,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def calc_K(pk,rhat,vxmin,dvx,nx,vymin,dvy,ny,vzmin,dvz,nz) :\n",
+    "def calc_K(pk,rhat,vmin,dv,n) :\n",
     "    '''Calculate the values of K simultaneously for all bins'''\n",
+    "    \n",
+    "    vxmin, vymin, vzmin = vmin\n",
+    "    dvx, dvy, dvz = dv\n",
+    "    pkx, pky, pkz = pk\n",
+    "    nx, ny, nz = n\n",
+    "    \n",
     "    K = np.zeros((nx,ny,nz))\n",
-    "    vmin = np.array([vxmin,vymin,vzmin])\n",
-    "    dvx, dvy, dvz = np.array([dvx,dvy,dvz])\n",
     "    \n",
     "    vxmax, vymax, vzmax = vxmin+nx*dvx,vymin+ny*dvy,vzmin+nz*dvz\n",
     "    # Find intersections along one dimension (say x)\n",
@@ -85,12 +84,10 @@
     "    \n",
     "    #v_space = np.array([vx_bins,vy_bins,vz_bins])\n",
     "    \n",
-    "    pkx, pky, pkz = pk\n",
-    "    \n",
     "    if np.linalg.norm(rhat)!=1:\n",
     "        raise ValueError('rhat must be a unit vector')\n",
     "\n",
-    "    rhatx, rhaty, rhatz = rhat\n",
+    "    rhatx, rhaty, rhatz = rhat[:,0], rhat[:,1], rhat[:,2]\n",
     "    \n",
     "    vrx = (vx_bins-pkx)/rhatx\n",
     "    vry = (vy_bins-pky)/rhaty\n",
@@ -130,26 +127,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 237,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def calc_sigma(rhatvals,pvals,pmean):\n",
+    "def calc_sigma2(rhat,pvals):\n",
     "    \n",
-    "    rhatvals_outer = rhatvals[:,:,None]*rhatvals[:,None,:]\n",
+    "    pmean = np.mean(pvals, axis=0)\n",
+    "    \n",
+    "    rhat_outer = rhat[:,:,None]*rhat[:,None,:]\n",
     "\n",
     "    iden = np.identity(3)\n",
     "    \n",
-    "    A = np.stack([iden]*len(rhatvals_outer))-rhatvals_outer\n",
+    "    A = np.stack([iden]*len(rhat_outer))-rhat_outer\n",
     "\n",
     "    Ainv = np.linalg.inv(A)\n",
     "    \n",
@@ -175,28 +167,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 238,
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.00051415,  0.08137924,  0.0386433 ])"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 234,
-   "metadata": {},
    "outputs": [],
    "source": [
     "def nl_delta(n,l):\n",
@@ -260,19 +234,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nx, ny, nz = 5, 5, 5\n",
-    "\n",
-    "phi = np.ones((nx,ny,nz))\n",
-    "\n",
-    "def sec_der(phi,sigma2,hx,hy,hz,nx,ny,nz):\n",
+    "def sec_der(phi,sigma2,dv):\n",
     "    \n",
-    "    \"\"\"Attempt to solve the problem without for-loops. Still needs some work\"\"\"\n",
+    "    \"\"\"Estimates the second deriative for ln(f(v_l)) given a sample of stars.\"\"\"\n",
     "    \n",
-    "    nx, ny, nz = len(phi[0]), len(phi[1]), len(phi[2])\n",
+    "    nx, ny, nz = phi.shape\n",
+    "    hx, hy, hz = h\n",
     "    \n",
     "    nxx, nyy, nzz = nx+2, ny+2, nz+2\n",
     "    \n",
@@ -280,32 +251,126 @@
     "\n",
     "    phip = np.zeros((nxx,nyy,nzz))\n",
     "\n",
-    "    \n",
     "    phip[1:-1,1:-1,1:-1] = phi\n",
     "    \n",
     "    kappa = sigma2/h2\n",
     "    \n",
-    "    kappa_sum = sum(sigma2/h2)\n",
+    "    kappa_sum = -2*sum(sigma2/h2)\n",
     "    \n",
-    "    phi_fac = np.array([phip[0:nxx-2:,:,:]+phip[2:nxx,:,:],\n",
-    "                           phip[:,0:nyy-2,:]+phip[:,2:nyy,:],\n",
-    "                           phip[:,:,0:nzz-2]+phip[:,:,2:nzz]])\n",
+    "    phi_fac = np.array([phip[0:nxx-2,1:-1,1:-1]+phip[2:nxx,1:-1,1:-1],\n",
+    "                           phip[1:-1,0:nyy-2,1:-1]+phip[1:-1,2:nyy,1:-1],\n",
+    "                           phip[1:-1,1:-1,0:nzz-2]+phip[1:-1,1:-1,2:nzz]])\n",
+    "\n",
+    "    phi_arrx = (sigma2[0]/h2[0])*phi_fac[0]\n",
+    "    phi_arry = (sigma2[1]/h2[1])*phi_fac[1]\n",
+    "    phi_arrz = (sigma2[2]/h2[2])*phi_fac[2]\n",
     "    \n",
-    "    phi_arr = np.dot(kappa,phi_fac)-2*kappa_sum*phip\n",
-    "    \n",
-    "    phi_arr = np.sum(phi_arr)\n",
-    "    \n",
+    "    phi_arr = phi_arrx+phi_arry+phi_arrz+kappa_sum*phi\n",
+    "\n",
     "    return phi_arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 240,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def phi_guess(vmin,dv,n):\n",
+    "    \n",
+    "    vxmin, vymin, vzmin = vmin\n",
+    "    dvx, dvy, dvz = dv\n",
+    "    nx, ny, nz = n\n",
+    "    \n",
+    "    vxmax, vymax, vzmax = vxmin+nx*dvx,vymin+ny*dvy,vzmin+nz*dvz\n",
+    "    \n",
+    "    vx_bins = np.arange(vxmin, vxmax+dvx, dvx)\n",
+    "    vy_bins = np.arange(vymin, vymax+dvy, dvy)\n",
+    "    vz_bins = np.arange(vzmin, vzmax+dvz, dvz)\n",
+    "    \n",
+    "    vxc = (vx_bins[1:]+vx_bins[:-1])/2\n",
+    "    vyc = (vy_bins[1:]+vy_bins[:-1])/2\n",
+    "    vzc = (vz_bins[1:]+vz_bins[:-1])/2\n",
+    "        \n",
+    "#    wthin = 0.91\n",
+    "#    wthick= 0.08\n",
+    "#    wthin = 0.70\n",
+    "#    wthick= 0.20\n",
+    "#    whalo = 1.-wthin-wthick\n",
+    "\n",
+    "    thin0 = np.array([0,215,0])\n",
+    "#    thick0 = np.array([0,180,0])\n",
+    "#    halo0 = np.array([0,0,0])\n",
+    "\n",
+    "    thin_disp  = np.array([30,20,17])\n",
+    "#    thick_disp  = np.array([80,60,55])\n",
+    "#    halo_disp = np.array([160,100,100])\n",
+    "    \n",
+    "    v0 = np.stack([thin0]*len(vxc))\n",
+    "    v0x = v0[:,0:1]\n",
+    "    v0y = v0[:,1:2]\n",
+    "    v0z = v0[:,2:3]\n",
+    "    \n",
+    "    disp = np.stack([thin_disp]*len(vxc))\n",
+    "    dispx = disp[:,0:1]\n",
+    "    dispy = disp[:,1:2]\n",
+    "    dispz = disp[:,2:3]\n",
+    "    \n",
+    "    gx = np.exp(-((vxc-v0x)**2)/(2*dispx**2)) / (dispx*np.sqrt(2*np.pi))\n",
+    "    gy = np.exp(-((vyc-v0y)**2)/(2*dispy**2)) / (dispy*np.sqrt(2*np.pi))\n",
+    "    gz = np.exp(-((vzc-v0z)**2)/(2*dispz**2)) / (dispz*np.sqrt(2*np.pi))\n",
+    "    \n",
+    "    phix, phiy, phiz = np.meshgrid(gx,gy,gx)\n",
+    "    \n",
+    "    phi = np.array([phix,phiy,phiz])\n",
+    "    \n",
+    "    return phi.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9, 9, 9, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = np.array([3, 3, 3])\n",
+    "\n",
+    "phi = np.ones((nx,ny,nz))\n",
+    "\n",
+    "vmin = np.array([0,0,0])\n",
+    "\n",
+    "h = np.array([1,1,1])\n",
+    "\n",
+    "g = phi_guess(vmin,h,n)\n",
+    "\n",
+    "print(g.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_L(pvals,rhat,vmin,dv,n):\n",
+    "    \n",
+    "    \"\"\"Call each function for a given sample -> get L\"\"\"\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
